  * Layouting improved when classifier contains itself; less errors:
    OLD layout_good_cases:       ERR=3,  W/C=9,    W/F=3,   W/L=25,   W/R=71
    OLD layout_challenging_cases ERR=37, W/C=9433, W/F=531, W/L=6622, W/R=7844
    NEW layout_good_cases        ERR=0,  W/C=7,    W/F=3,   W/L=25,   W/R=74
    NEW layout_challenging_cases ERR=31, W/C=9446, W/F=536, W/L=6626, W/R=7908

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sun, 02 Feb 2025 08:30:00 +0100

crystal-facet-uml (1.62.1) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * All new(!) files are of type json - no native sqlite3 format anymore
  * Stereotype icons of non-empty packages are positioned next to the label

 -- Andreas Warnke <cfu@andreaswarnke.de>  Tue, 31 Dec 2024 08:30:00 +0100

crystal-facet-uml (1.62.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * Gui shows labels below the icons of buttons
  * The save icon indicates if there are unsaved changes

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sat, 21 Dec 2024 18:00:00 +0100

crystal-facet-uml (1.61.2) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * Diagrams can show the defined maximum number of features and relationships
    independant of their occurrences in other diagrams

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sun, 01 Dec 2024 08:30:00 +0100

crystal-facet-uml (1.61.1) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * Database iterator allows the model export to handle unexpected many life-
    lines and messages

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sun, 24 Nov 2024 18:30:00 +0100

crystal-facet-uml (1.61.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * Compatibility to version 1.25.0 and earlier dropped to increase test
    coverage.
  * Icons of diagram types are less similar to each other.

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sun, 27 Oct 2024 08:00:00 +0100

crystal-facet-uml (1.60.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]